ingress-routes/route_courses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kurse-termine-frontend
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: $1$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - sgse2021-ilias.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: sgse2021-ilias.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /courses(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: courses-appointments-frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kurse-termine-api
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: $1$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - sgse2021-ilias.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: sgse2021-ilias.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /courses-api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: courses-appointments
                port:
                  number: 8080
