ingress-routes/route_exams.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pruefungen
  namespace: microservices-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: $1$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - sgse2021-ilias.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: sgse2021-ilias.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /exams(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pruefungsleistungsmanagement
                port:
                  number: 80
