ingress-routes/route_testapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /vote$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - sgse2021-ilias.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: sgse2021-ilias.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /vote(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: test-app-front
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-static
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /vote/static/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - sgse2021-ilias.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: sgse2021-ilias.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /vote/static(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: test-app-front
                port: 
                  number: 80
