ingress-routes/route_users.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userverwaltung-api
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: $1$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - sgse2021-ilias.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: sgse2021-ilias.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /users-api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: userverwaltung
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userverwaltung-front
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: $1$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - sgse2021-ilias.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: sgse2021-ilias.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: userverwaltung-frontend
                port:
                  number: 80
